# downloader

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  cspell.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml
.reuse/: dep5
examples/: download.rs  tui_basic.rs
src/: backend.rs  download.rs  downloader.rs  lib.rs  mirror.rs  progress.rs  verify.rs
