[package]
name = "downloader"
version = "0.2.1"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2018"
description = "A simple way to download things via HTTP/HTTPS"
repository = "https://github.com/hunger/downloader"
license = "LGPL-3.0-or-later"
keywords = [ "http", "https", "download" ]
categories = [ "web-programming::http-client" ]

[features]
default = []
tui = [ "indicatif" ]
verify = [ "sha3" ]

[dependencies]
futures = { version = "0.3" }
reqwest = { version = "0.11" }
rand = { version = "0.8" }
thiserror = { version = "1.0" }
tokio = { version = "1.1", features = [ "rt-multi-thread", "time" ] }

indicatif = { version = "0.15", optional = true }
sha3 = { version = "0.9", optional = true }
